# ece598proj

./: .gitignore  .gitmodules  README.md
robotis_mini/: CMakeLists.txt  package.xml
robotis_mini/action/: ExecutePose.action
robotis_mini/actions/: RestoreInitialPose.action
robotis_mini/config/: controllers.yaml  initial_pose.yaml
robotis_mini/include/robotis_mini/: hardware.hpp  ik.hpp  kinematics.hpp  restore_initial_pose.hpp
robotis_mini/include/robotis_mini/servers/: restore_initial_pose.hpp
robotis_mini/launch/: pose_server.launch  startup.launch
robotis_mini/plugin_description/: hardware.xml
robotis_mini/scripts/: init  squat_loop
robotis_mini/services/: ComputeIK.srv
robotis_mini/src/: hardware.cpp  hardware_impl.cpp  hardware_sim.cpp  ik.cpp
robotis_mini/src/nodes/: kinematics.cpp  pose.cpp  restore_initial_pose.cpp
robotis_mini/urdf/: robotis_mini.urdf
robotis_mini_model/: CMakeLists.txt  package.xml
robotis_mini_model/config/: controllers.yaml
robotis_mini_model/meshes/: DMB-B02(W)_s.stl  DMF-B01(W)_s.stl  DMF-B03(W)_s.stl  DMF-B04(W)_s.stl  DMF-B05(W)_s.stl  DMF-B06(W)_s.stl  DMF-B07(GR)_s.stl  DMF-F01(W)_s.stl  SPD-3B3(W)_s.stl  SPD-3B5(W)_s.stl  SPD-3B7(W)_s.stl  SPD-4B5(W)_s.stl  SPD-7V4(W)_s.stl  SPL-2B2(W)_s.stl  SPO-5(GR)_s.stl  SPU-5(W)_s.stl  XL-320D_s.stl
robotis_mini_model/urdf/: common.urdf.xacro  robotis_mini.urdf  robotis_mini.urdf.xacro  robotis_mini_spherized.urdf  robotis_mini_spherized.yml  ros2_control.urdf.xacro
robotis_mini_model/urdf_old/: robotis_mini.csv  robotis_mini.urdf
robotis_mini_sim/: CMakeLists.txt  package.xml
robotis_mini_sim/config/: controllers.yaml
robotis_mini_sim/launch/: gazebo.launch
robotis_mini_sim/meshes/: Body_d.STL  L_arm_01_d.STL  L_arm_02_d.STL  L_arm_03_d.STL  L_leg_01_d.STL  L_leg_03_d.STL  L_leg_04_d.STL  L_leg_05_d.STL  R_Leg_02_d.STL  R_arm_01_d.STL  R_arm_02_d.STL  R_arm_03_d.STL  R_leg_01_d.STL  R_leg_03_d.STL  R_leg_04_d.STL  R_leg_05_d.STL
robotis_mini_sim/urdf/: robotis_mini.urdf
robotis_mini_sim/worlds/: empty.world  empty_world.world
robotis_mini_vis/: CMakeLists.txt  package.xml
robotis_mini_vis/config/: controllers.yaml
robotis_mini_vis/launch/: gazebo.launch  rviz.launch
robotis_mini_vis/rviz/: empty.rviz
robotis_mini_vis/worlds/: empty.world
