<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis_mini</name>
  <version>0.0.1</version>
  <description>A ROS2 package for Robotis MINI.</description>
  <maintainer email="ytliu2@illinois.edu">Yen-Ting Liu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
